--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13",
     "vue": "^3.2.13"
   },
   "devDependencies": {
